# KubeMarine

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  MANIFEST.in  README.md  SECURITY.md  \  build.sh  kubemarine.spec  kubetools  kubetools.py  macos11_build_prepare.sh  main.spec  pyproject.toml  requirements-pyinstaller.txt  requirements.txt  requirements_nt.txt  setup.cfg  setup.py
.github/: auto-labeler-config.yaml  dependabot.yml  prettier.yaml  pull_request_template.md  super-linter.env
.github/linters/: .checkov.yaml  .eslintrc.yml  .jscpd.json  .yaml-lint.yml  actionlint.yml
.github/workflows/: build.yaml  ci.yaml  cla.yaml  crda.yml  docker.yaml  gts.yaml  integration_tests.yaml  patch.yaml  patches.yaml  prettier.yaml  profanityChecker.yaml  profanityFilter.yaml  publish.yaml  pypi.yaml  release.yaml  test-workflow.yaml  test_install.yaml  tests.yaml  transfer_repo_image.yaml  unit-tests.yaml
ADR/: maintenance-HAProxy-ADR.md
adr/: maintenance-HAProxy-ADR.md
ci/: Dockerfile-transfer  config.yaml  default_cluster.yaml  default_config.yaml  extended_cluster.yaml  extended_config.yaml
docs/: LoadBalancing.md  Logging.md  PackageExtension.md  Troubleshooting.md
docs/design/: 1-upgrade-patches-registration-and-implementation.md  3-release-notes-management.md
docs/examples/: auto-labeler-config.yaml
docs/internal/: Kubemarine-docker-building.md  NetworkPerfomance.md  Patches.md  Release.md
docs/public/: Ansible_Breaking_Changes.md  Installation.md  Kubecheck.md  LoadBalancing.md  Maintenance.md  Troubleshooting.md
documentation/: CIS.md  Installation.md  Kubecheck.md  LoadBalancing.md  Logging.md  Maintenance.md  PackageExtension.md  TlsTermination.md  Troubleshooting.md
documentation/design/: 1-upgrade-patches-registration-and-implementation.md  3-release-notes-management.md
documentation/internal/: Hardening.md  Kubemarine-docker-building.md  Kubemarine-docker-bulding.md  NetworkPerfomance.md  OAuth.md  Patches.md  Release.md
examples/: most_restricted_psp.yaml
examples/cluster.yaml/: allinone-cluster-ol7.yaml  allinone-cluster.yaml  full-cluster.yaml  miniha-cluster.yaml  minimal-cluster.yaml  one-cp-many-workers-cluster.yaml  typical-cluster.yaml
examples/procedure.yaml/: full-backup.yaml  full-reboot.yaml  full-restore.yaml  full-restore_with_source_node.yaml  minimal-backup.yaml  minimal-restore.yaml
kubemarine/: __init__.py  __main__.py  admission.py  apparmor.py  apt.py  audit.py  controlplane.py  coredns.py  deltas.py  demo.py  etcd.py  haproxy.py  jinja.py  k8s_certs.py  keepalived.py  kubernetes.py  kubernetes_accounts.py  modprobe.py  packages.py  podman.py  psp.py  pss.py  reunion.py  selinux.py  sysctl.py  system.py  testsuite.py  thirdparties.py  version  yum.py
kubemarine/adr/: test.md
kubemarine/core/: action.py  annotations.py  cluster.py  connections.py  defaults.py  environment.py  errors.py  executor.py  flow.py  group.py  inventory.py  log.py  os.py  patch.py  proxytypes.py  resources.py  schema.py  static.py  summary.py  utils.py  yaml.py  yaml_merger.py
kubemarine/cri/: __init__.py  containerd.py  docker.py
kubemarine/deltas/: 1_initial_delta.yaml
kubemarine/kubernetes/: __init__.py  components.py  daemonset.py  deployment.py  object.py  replicaset.py  secrets.py  statefulset.py
kubemarine/patches/: __init__.py  boot_timeout_per_node.py  configure_sa_issuer_discovery.py  containerd_upgrade.py  disable_token_automount.py  disable_unattended_upgrade.py  nginx_cluster_ip.py  p0_bind_vrrp_ips_interfaces.py  p1_api_version.py  p1_calico_typha_schedule_control_planes.py  p1_enable_calico_audit.py  p1_enable_proxy_protocol.py  p1_enable_proxy_protocol_fullha_scheme.py  p1_fix_enable_calico_metrics.py  p1_fix_nginx_ingress_k8s_1_25_x.py  p1_helm_values.py  p1_install_calico_apiserver.py  p1_inventory_plugins_resources.py  p1_kubeadm_flags.py  p1_mandatory_packages_off.py  p1_migrate_not_bind_vrrp.py  p1_override_target_ports.py  p1_patch_inventory.py  p1_pin_kubernetes_version.py  p1_reconfigure_registries.py  p1_reinstall_calico.py  p1_replace_podman_to_ctr.py  p1_set_sysctl_variables.py  p1_upgrade_calico_version.py  p1_upgrade_containerdio_version.py  p1_upgrade_cri_versions.py  p1_upgrade_crictl_version.py  p2_calico_typha_metrics.py  p2_do_render_config.py  p2_fix_haproxy_user.py  p2_haproxy_maintenance_listen_internal.py  p2_install_calico_apiserver.py  p2_inventory_plugins_resources.py  p2_mark_proxy_protocol_disabled_minha_scheme.py  p2_reconfigure_audit_policy.py  (+20 more)
kubemarine/plugins/: __init__.py  builtin.py  calico.py  clear_old_job_nginx.py  csi_snapshot_controller.py  envoy_gateway.py  haproxy_ingress.py  kubernetes_dashboard.py  local_path_provisioner.py  manifest.py  nginx_ingress.py  openstack_cinder_csi.py
kubemarine/procedures/: __init__.py  add_node.py  backup.py  cert_renew.py  check_iaas.py  check_paas.py  config.py  do.py  haproxy_mntc.py  install.py  manage_psp.py  manage_pss.py  migrate_cri.py  migrate_kubemarine.py  reboot.py  reconfigure.py  remove_node.py  restore.py  reunion.py  upgrade.py
kubemarine/resources/: __init__.py
kubemarine/templates/: admission.yaml.j2  etcd_backup.yaml.j2  haproxy.cfg.j2  keepalived.conf.j2
kubetool/: __main__.py  apparmor.py  apt.py  audit.py  coredns.py  demo.py  etcd.py  haproxy.py  jinja.py  k8s_certs.py  keepalived.py  kubernetes.py  kubernetes_accounts.py  packages.py  psp.py  selinux.py  sysctl.py  system.py  test2.py  testsuite.py  thirdparties.py  yum.py
kubetool/core/: annotations.py  cluster.py  connections.py  defaults.py  environment.py  executor.py  flow.py  group.py  log.py  utils.py  yaml_merger.py
kubetool/cri/: __init__.py  containerd.py  docker.py
kubetool/plugins/: __init__.py  calico.py  haproxy_ingress.py  nginx_ingress.py
kubetool/procedures/: add_node.py  backup.py  cert_renew.py  check_iaas.py  do.py  (+8 more)
scripts/: migrate.py  test_migrate.py
test/: __init__.py
thirdparties/: description.yaml.j2  thirdpaties_update.py  thirdpaties_update.yaml
(+291 files in other folders)
