[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "readme"]
name = "kubemarine"
description = "Management tool for Kubernetes cluster deployment and maintenance"
authors = [
    {name = "Kubemarine Group", email = "kubemarinegroup@netcracker.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
]
keywords = ["kubernetes", "devops", "administration", "helm"]
dependencies = [
    "PyYAML==6.0",
    "deepmerge==1.0.*",
    "fabric==2.6.*",
    "jinja2==3.1.*",
    "MarkupSafe==2.0.*",
    "invoke==1.6.*",
    "ruamel.yaml==0.17.*",
    "pygelf==0.4.*",
    "toml==0.10.*",
    "python-dateutil==2.8.*",
    "deepdiff==5.7.*",
    # cryptography is a transitive dependency of paramiko. Fix version to avoid unexpected deprecation warnings.
    "cryptography==39.0.*",
    "paramiko==2.11.*",
    "jsonschema==4.17.*",
]
requires-python = ">=3.7"

[project.optional-dependencies]
ansible = ["ansible==6.7.*"]

# Auxiliary executable roughly equivalent to python -m kubemarine
# Allows to not worry about exact path to python executable on the client machine
# Should still no be called directly as it does not ensure necessary environment variables.
# Real executables are installed by setup.py
[project.scripts]
_kubemarine = "kubemarine.__main__:main"

[project.urls]
Homepage = "https://github.com/Netcracker/KubeMarine"
Documentation = "https://github.com/Netcracker/KubeMarine#documentation"
Issues = "https://github.com/Netcracker/KubeMarine/issues/"

# To change version with automatic push and triggering of the release workflow use
# 1. pip install bumpver
# 2. bumpver update --set-version <new version>
[tool.bumpver]
current_version = "0.13.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version to {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"kubemarine/version" = [
    '^{version}$'
]
