[metadata]
name = kubetool
# Version should not be hard-coded here.
# It should be calculated dynamically in "setup.py" in integration with CI during build/publication process.
# We do not have integration with build/publication process, so effectively we do not use version.
version = 0.0.1

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PyYAML
    deepmerge
    fabric
    jinja2==2.11.*
    invoke
    ruamel.yaml
    ansible==2.9.9
    pygelf
    toml

[options.packages.find]
exclude = test, test.*

# Include all resources required by kubetool in runtime.
[options.package_data]
* = *
